<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
            android:key="use_custom_bios"
            android:title="@string/use_custom_bios"
            android:summary="@string/custom_bios_firmware_description"
            app:iconSpaceReserved="false"
            android:defaultValue="false" />

    <SwitchPreference
            android:key="show_bios"
            android:title="@string/show_boot_screen"
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:dependency="use_custom_bios" />

    <SwitchPreference
            android:key="block_bios_download"
            android:title="@string/block_bios_download_title"
            android:summary="@string/block_bios_download_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="false" />

    <Preference
            android:key="auto_download_ds_bios"
            android:title="@string/auto_download_ds_bios_title"
            android:summary="@string/auto_download_ds_bios_summary"
            app:iconSpaceReserved="false" />

    <me.magnum.melonds.ui.settings.preferences.BiosDirectoryPickerPreference
            android:key="bios_dir"
            android:title="@string/bios_directory"
            app:iconSpaceReserved="false"
            app:consoleType="ds" />

    <Preference
            android:key="auto_download_dsi_bios"
            android:title="@string/auto_download_dsi_bios_title"
            android:summary="@string/auto_download_dsi_bios_summary"
            app:iconSpaceReserved="false" />

    <me.magnum.melonds.ui.settings.preferences.BiosDirectoryPickerPreference
            android:key="dsi_bios_dir"
            android:title="@string/dsi_bios_directory"
            app:iconSpaceReserved="false"
            app:consoleType="dsi" />

    <ListPreference
            android:key="dsiware_boot_mode"
            android:title="@string/dsiware_boot_mode_title"
            android:summary="%s"
            android:entries="@array/dsiware_boot_mode_entries"
            android:entryValues="@array/dsiware_boot_mode_values"
            android:defaultValue="autoload"
            app:iconSpaceReserved="false" />

    <SwitchPreference
            android:key="custom_randomize_mac_address"
            android:title="@string/randomize_mac_address"
            android:summary="@string/randomize_mac_address_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="false" />
</PreferenceScreen>