<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            android:title="@string/pref_cat_input_layouts"
            app:iconSpaceReserved="false">

        <me.magnum.melonds.ui.settings.preferences.InGameLockedPreference
                android:key="input_key_mapping"
                android:title="@string/key_mapping"
                android:summary="@string/key_mapping_summary"
                app:iconSpaceReserved="false" />

        <me.magnum.melonds.ui.settings.preferences.InGameLockedPreference
                android:key="input_layouts"
                android:title="@string/layouts"
                android:summary="@string/layouts_summary"
                app:iconSpaceReserved="false" />

        <ListPreference
                android:key="soft_input_behaviour"
                android:title="@string/soft_input_behaviour"
                android:summary="%s"
                android:entries="@array/soft_input_behaviour_options"
                android:entryValues="@array/soft_input_behaviour"
                android:defaultValue="hide_system_buttons_when_controller_connected"
                app:useSimpleSummaryProvider="true"
                app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_cat_touch_controls"
            app:iconSpaceReserved="false">

        <ListPreference
                android:key="button_color_theme"
                android:title="@string/button_color_theme"
                android:summary="%s"
                app:iconSpaceReserved="false"
                android:entries="@array/button_color_theme_options"
                android:entryValues="@array/button_color_theme_values"
                android:defaultValue="cyber_cyan" />

        <SwitchPreference
                android:key="pref_touch_dpad_stick_mode"
                android:title="@string/pref_touch_dpad_stick_mode_title"
                android:summary="@string/pref_touch_dpad_stick_mode_summary"
                app:iconSpaceReserved="false"
                android:defaultValue="false" />

        <SeekBarPreference
                android:key="input_opacity"
                android:title="@string/soft_input_opacity"
                app:iconSpaceReserved="false"
                android:defaultValue="50"
                android:max="100" />

        <SwitchPreference
                android:key="input_touch_haptic_feedback_enabled"
                android:title="@string/vibrate_on_touch"
                app:iconSpaceReserved="false"
                android:defaultValue="true" />

        <SeekBarPreference
                android:key="input_touch_haptic_feedback_strength"
                android:title="@string/vibration_strength"
                android:dependency="input_touch_haptic_feedback_enabled"
                app:iconSpaceReserved="false"
                app:updatesContinuously="true"
                android:defaultValue="30"
                app:min="1"
                android:max="100" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_cat_gamepads_sensors"
            app:iconSpaceReserved="false">

        <SwitchPreference
                android:key="input_gyro_aiming_enabled"
                android:title="@string/input_gyro_aiming_title"
                android:summary="@string/input_gyro_aiming_summary"
                app:iconSpaceReserved="false"
                android:defaultValue="false" />

        <SeekBarPreference
                android:key="input_gyro_sensitivity_x"
                android:title="@string/input_gyro_sensitivity_x_title"
                android:dependency="input_gyro_aiming_enabled"
                app:iconSpaceReserved="false"
                android:defaultValue="125"
                app:min="10"
                android:max="300"
                app:showSeekBarValue="true" />

        <SeekBarPreference
                android:key="input_gyro_sensitivity_y"
                android:title="@string/input_gyro_sensitivity_y_title"
                android:dependency="input_gyro_aiming_enabled"
                app:iconSpaceReserved="false"
                android:defaultValue="125"
                app:min="10"
                android:max="300"
                app:showSeekBarValue="true" />

        <SwitchPreference
                android:key="input_gyro_invert_x"
                android:title="@string/input_gyro_invert_x_title"
                android:summary="@string/input_gyro_invert_x_summary"
                android:dependency="input_gyro_aiming_enabled"
                app:iconSpaceReserved="false"
                android:defaultValue="false" />

        <SwitchPreference
                android:key="input_gyro_invert_y"
                android:title="@string/input_gyro_invert_y_title"
                android:summary="@string/input_gyro_invert_y_summary"
                android:dependency="input_gyro_aiming_enabled"
                app:iconSpaceReserved="false"
                android:defaultValue="false" />

        <SeekBarPreference
                android:key="input_gyro_deadzone_x"
                android:title="@string/input_gyro_deadzone_x_title"
                android:summary="@string/input_gyro_deadzone_x_summary"
                android:dependency="input_gyro_aiming_enabled"
                app:iconSpaceReserved="false"
                android:defaultValue="15"
                app:min="0"
                android:max="50"
                app:showSeekBarValue="true" />

        <SeekBarPreference
                android:key="input_gyro_deadzone_y"
                android:title="@string/input_gyro_deadzone_y_title"
                android:summary="@string/input_gyro_deadzone_y_summary"
                android:dependency="input_gyro_aiming_enabled"
                app:iconSpaceReserved="false"
                android:defaultValue="15"
                app:min="0"
                android:max="50"
                app:showSeekBarValue="true" />

        <SwitchPreference
                android:key="input_turbo_macros_enabled"
                android:title="@string/input_turbo_macros_title"
                android:summary="@string/input_turbo_macros_summary"
                app:iconSpaceReserved="false"
                android:defaultValue="false" />

        <SwitchPreference
                android:key="input_gyro_mic_enabled"
                android:title="@string/input_gyro_mic_title"
                android:summary="@string/input_gyro_mic_summary"
                app:iconSpaceReserved="false"
                android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
